[workspace]
members = [
  "contracts/drip-disburser",
  "contracts/drip-price-oracle",
  "contracts/drip-price-adapter-twap-ibc",
  "packages/interfaces/drip-disburser-interface"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Raumo0 <dharapko@gmail.com>"]
repository = "https://github.com/cosmo-drip/drip-contracts"
#documentation = ""
#readme = ""
#homepage = ""


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-utils = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = "2.0.0"
drip-disburser-interface = { path = "packages/interfaces/drip-disburser-interface" }
