[package]
name = "disburser"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Raumo0 <dharapko@gmail.com>"]
description = "Contract for token disbursements in DRIP"
repository = "https://github.com/your-org/drip-contracts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
# default = ["library"]
library = []

[package.metadata.scripts]
optimize-wasm = "../../scripts/optimize-wasm.sh ../../Cargo.lock"
clean-schema = "rm -rf schema && mkdir -p schema"
generate-schema = "rm -rf schema && mkdir -p schema && cargo run --bin schema"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
   "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-utils = "2.0.0"
cw-controllers = "2.0.0"

[dev-dependencies]
cw-multi-test = "2.0.0"
