[package]
name = "disburser"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Raumo0 <dharapko@gmail.com>"]
description = "Contract for token disbursements in DRIP"
repository = "https://github.com/cosmo-drip/drip-contracts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
# default = ["library"]
library = []

[package.metadata.scripts]
optimize-wasm = "../../scripts/optimize-wasm.sh ../../Cargo.lock"
clean-schema = "rm -rf schema && mkdir -p schema"
generate-schema = "rm -rf schema && mkdir -p schema && cargo run --bin schema"

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
cw-utils.workspace = true
cw-controllers.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
